--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -120,6 +120,9 @@ h2 {
 header h2 {
     font-size: 4rem;
     text-transform: none;
+    @include tablet {
+        text-align: center;
+    }
     @media (max-width: 660px){
         font-size: 2.4rem;
     }
@@ -141,9 +144,9 @@ p {
 
 
 section {
-    padding: 80px 0;
+    padding: 30px 0;
     @include smallDesk{
-        padding: 40px 0;
+        // padding: 40px 0;
     }
 }
 
