--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -85,8 +85,6 @@ nav {
         @include smallDesk {
             margin: 0;
             padding: 0;
-            // border: 2px solid #000;
-            // position: fixed;
             position: absolute;
             top: -50px;
             right: -50px;
@@ -120,7 +118,7 @@ nav {
         }
         &:nth-child(3) a:hover:after,
         &:nth-child(3) a:focus:after {
-            width: 65px;
+            width: 40px;
         }
         &:nth-child(4) a:hover:after,
         &:nth-child(4) a:focus:after {
@@ -139,7 +137,7 @@ nav {
         transition: all 0.3s;
         @include smallDesk {
             display: inline-block;
-            border: 1px solid $fontColor;
+            border: 2px solid $fontColor;
             padding: 5px 10px;
         }
         
@@ -210,12 +208,12 @@ nav {
 
 .hamburger span {
     display: block;
-    height: 3px;
+    height: 4px;
     background: $fontColor;
     position: absolute;
     left: 8px;
     right: 8px;
-    border-radius: 5px;
+    border-radius: 20px;
     opacity: 1;
     transition: all 0.5s ease;
 }
@@ -225,7 +223,7 @@ nav {
 }
 
 .hamburger span:nth-child(2) {
-    top: 22px;
+    top: 21px;
 }
 
 .hamburger span:last-child {
@@ -256,21 +254,21 @@ nav ul .active {
         
     }
     &:nth-child(2) {
-        top: 60px;
+        top: 65px;
         right: 200px;
     }
     &:nth-child(3) {
-        top: 120px;
+        top: 114px;
         right: 170px;
         
     }
     &:nth-child(4) {
-        top: 155px;
+        top: 161px;
         right: 120px;
         
     }
     &:last-child {
-        top: 210px;
+        top: 204px;
         right: 75px;
         
     }
