--- a/dev/styles/partials/_works.scss
+++ b/dev/styles/partials/_works.scss
@@ -1,7 +1,7 @@
 //my works styles
 
 .work {
-    margin-bottom: 170px;
+    margin-bottom: 100px;
     position: relative;
     @include tablet {
         margin-bottom: 80px;
@@ -64,7 +64,8 @@
     justify-content: space-between;
     flex-wrap: wrap;
     @include phone {
-        justify-content: space-around;
+        // justify-content: space-around;
+        justify-content: flex-start;
 
     }
 }
@@ -87,6 +88,11 @@
     }
     i {
         padding-top: 5px;
+    }
+    &:first-child {
+        @include phone {
+            margin-right: 20px;
+        }
     }
     &:last-child {
         @include phone {
